--- a/passcode/src/main/res/drawable/dot_empty.xml
+++ b/passcode/src/main/res/drawable/dot_empty.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/greyish" />
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval" >
+
+    <solid
+        android:color="@android:color/transparent" >
+    </solid>
+
+    <stroke
+        android:width="1dp"
+        android:color="@color/dark_gray" >
+    </stroke>
+
 </shape>
