--- a/passcode/src/main/res/values/colors.xml
+++ b/passcode/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="white">#ffffff</color>
     <color name="greyish">#aaa8a8</color>
     <color name="mine_shaft">#303030</color>
+    <color name="light_gray">#999999</color>
+    <color name="dark_gray">#999999</color>
+    <color name="blue">#0575e6</color>
 </resources>
